<resources>
    <string name="app_name">UI</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="welcome_to_smart_chip">Welcome to Smart Chip</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="exit">Exit</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_password">EditPasswordActivity</string>
</resources>
