<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context="com.app.sogal.ui.MainStartupActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnRgister"
        android:layout_width="153dp"
        android:layout_height="66dp"
        android:layout_marginBottom="32dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="153dp"
        android:layout_height="0dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="19dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnRgister"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btnExit"
        android:layout_width="64dp"
        android:layout_height="44dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="19dp"
        android:text="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
